Now based on libhomegear-ipc

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@ AM_CPPFLAGS = -Wall -std=c++11 -DFORTIFY_SOURCE=2 -DGCRYPT_NO_DEPRECATED
 
 bin_PROGRAMS = homegear-ipc-example
 homegear_ipc_example_SOURCES = main.cpp IpcClient.cpp
-homegear_ipc_example_LDADD = -lpthread -lhomegear-base -lgnutls -lgcrypt -lgpg-error
+homegear_ipc_example_LDADD = -lpthread -lhomegear-ipc -lgnutls -lgcrypt -lgpg-error
 
 if BSDSYSTEM
 else
